<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearcherDashboard">

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Location: "
        android:textSize="16sp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Searcher"
        android:textColor="#CDDC39"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Search Bar Container -->
    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Search Input -->
        <EditText
            android:id="@+id/searchInput"
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@android:drawable/ic_search_category_default"
            android:hint="Search jobs..."
            android:padding="10dp"
            android:textSize="16sp" />

        <!-- Search Button -->
        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:padding="10dp"
            android:text="Search"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- RecyclerView for Job Listings -->

    <!-- Logout Button -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="408dp"
        android:layout_height="620dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/LogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterContainer"
        app:layout_constraintVertical_bias="0.549" />

    <Button
        android:id="@+id/LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Logout"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/PreferredList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square_button"
        android:padding="10dp"
        android:text="Preferred List"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/filterContainer"
        android:layout_width="411dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp">

        <Button
            android:id="@+id/filterButton"
            android:layout_width="78dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:padding="10dp"
            android:text="Filter"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvFilteredResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filterContainer" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
